# afrikana-analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  publish_pypi.yml
afrikana/: __init__.py  churn.py  financial.py  forecast.py  ltv.py  stations.py  utils.py
afrikana_analytics.egg-info/: SOURCES.txt  requires.txt
examples/: spiro_demo.py
tests/: conftest.py  test_churn.py  test_financial.py  test_ltv.py  test_stations_forecast.py
