[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afrikana-analytics"
version = "0.1.2"
description = "Production-ready analytics toolkit for customer retention, LTV, financial modelling, and infrastructure deployment - built in Africa, applicable anywhere"

readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Peterson Mutegi", email = "pitmuriuki@gmail.com" }
]
keywords = [
    "analytics",
    "africa",
    "ev",
    "mobility",
    "fintech",
    "churn",
    "ltv",
    "financial-modelling",
    "machine-learning",
    "customer-analytics",
    "station-deployment",
    "demand-forecasting",
    "subscription-analytics",
    "infrastructure-planning",
    "emerging-markets"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
viz = [
    "plotly>=5.18.0",
    "matplotlib>=3.7.0"
]

[project.urls]
Homepage = "https://github.com/Peterson-Muriuki/afrikana-analytics"
Repository = "https://github.com/Peterson-Muriuki/afrikana-analytics"
Documentation = "https://github.com/Peterson-Muriuki/afrikana-analytics#readme"
"Bug Tracker" = "https://github.com/Peterson-Muriuki/afrikana-analytics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["afrikana*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]